[tool.poetry]
name = "quart-example"
version = "0.1.0"
description = "Quart Example API"
authors = ["Ryan Davis <ryancraigdavis@github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
quart = "^0.19.4"

[tool.poetry.scripts]
start = "src/quart_example:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
